# Polyhedron

./: .clang-format  .gitignore  README_polyhedron  default.cfg  disclaimer.txt  log.txt  startup.cfg
.tmp/: launch.json
.vscode-old/: launch.json
android/: .gitignore  AndroidManifest.xml  build_by_build_model_json.py  local.properties
cmake/: SDL2_Image-2.0.5_CMakeLists.txt  SDL2_mixer-2.0.4_CMakeLists.txt  jpeg-9b_CMakeLists.txt  patch-libogg-add-stdint-h.diff  patch-libvorbis-CMakeLists.txt.diff  patch-libvorbis-lib-CMakeLists.txt.diff  thirdparty.cmake  thirdparty.cmake.orig  thirdparty_ep.cmake
config/: default.cfg  default_map_settings.cfg  init.cfg  restore.cfg  saved.cfg  server-init.cfg  servers.cfg  stdedit.cfg  stdlib.cfg  ui.cfg
configx/: saved.cfg
orig-config/: default.cfg  (+3 more)
src/: .gitignore  CMakeLists.txt  Polyhedron.cbp  WatIsDeze.code-workspace  build.ninja  engine+blend.binding.cpp  engine+client.binding.cpp  engine+command.binding.cpp  engine+console.binding.cpp  engine+light.binding.cpp  engine+main.binding.cpp  engine+menus.binding.cpp  engine+movie.binding.cpp  engine+normal.binding.cpp  engine+octa.binding.cpp  engine+octaedit.binding.cpp  engine+octarender.binding.cpp  engine+physics.binding.cpp  engine+pvs.binding.cpp  engine+rendergl.binding.cpp  engine+renderlights.binding.cpp  engine+rendermodel.binding.cpp  engine+rendertext.binding.cpp  engine+server.binding.cpp  engine+serverbrowser.binding.cpp  engine+shader.binding.cpp  engine+sound.binding.cpp  engine+texture.binding.cpp  engine+ui.binding.cpp  engine+world.binding.cpp  engine+worldio.binding.cpp  game+entities+player.binding.cpp  rules.ninja
src/.externalToolBuilders/: CMake.launch
src/binding/: index.py  refukker.py
src/binding/autobind/: clang_format.py  clangtest.py  compileflags.py  parsecpp.py  symbol_db.py  word_db.py
src/binding/autobind/cppmodel/: CxxClass.py  CxxFunction.py  CxxInclude.py  CxxNode.py  CxxProject.py  CxxTemplate.py  CxxTranslationUnit.py  CxxVariable.py  PhuiElement.py
src/binding/autobind/generator/: ClassHeaderSourceSplitter.py  CubeScriptBinding.py  JsonSerializer.py  PythonScriptBinding.py
src/enet/: enet.cbp  peer.c
src/enet/docs/: design.dox  tutorial.dox
src/enet/include/enet/: enet.h
src/engine/: GLFeatures.cpp  GLFeatures.h  SoundConfig.h  aa.cpp  aa.h  animmodel.h  bih.cpp  bih.h  blend.cpp  blend.h  client.cpp  client.h  command.cpp  command.h  console.cpp  console.h  dynlight.cpp  dynlight.h  engine.h  explosion.h  grass.cpp  grass.h  help.cpp  hitzone.h  hud.cpp  hud.h  includegl.h  lensflare.h  light.cpp  light.h  lightning.h  log.cpp  main.cpp  material.cpp  material.h  md2.h  menus.cpp  menus.h  model.h  movie.cpp  (+49 more)
src/engine/client/: client.cpp  client.h
src/engine/engine/: font.cpp  font.h
src/engine/main/: AppConfig.cpp  AppConfig.h  Application.cpp  Application.h  Clock.cpp  Clock.h  CommandlineArguments.cpp  CommandlineArguments.h  Compatibility.cpp  Compatibility.h  FPS.cpp  FPS.h  GLContext.cpp  GLContext.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  SoundConfig.cpp  SoundConfig.h  Window.cpp  Window.h
src/engine/nui/: nui.cpp  nui.h
src/engine/server/: server.cpp  server.h
src/engine/ui/: uiloader.cpp  uimain.cpp  uimain.h
src/ext/: .gitignore
src/ext/glad/include/glad/: glad.h
src/ext/glad/src/: glad.c
src/ext/json-develop/include/nlohmann/detail/input/: json_sax.hpp
src/ext/nuklear/: nuklear.h  nuklear_polyhedron.cpp  nuklear_polyhedron.h  nuklear_sdl_gl3.h
src/ext/renderdoc/: renderdoc_api.cpp  renderdoc_api.h
src/game/: ai.cpp  ai.h  commands.cpp  commands.h  entities.cpp  entities.h  game.cpp  game.h  render.cpp  server.cpp  server.h  waypoint.cpp
src/game/client/: authorizationkey.cpp  authorizationkey.h  client.cpp  client.h
src/game/entities/: basemapmodel.cpp  basemapmodel.h  basemonster.cpp  basemonster.h  door.cpp  door.h  dynamiclight.cpp  dynamiclight.h  player.cpp  player.h  playerstart.cpp  playerstart.h
src/game/server/: server.cpp  server.h
src/oldgame/: ai.cpp  aiman.h  client.cpp  ctf.h  entities.cpp  extinfo.h  game.cpp  game.h  render.cpp  scoreboard.cpp  server.cpp  weapon.cpp
src/server/: master.cpp
src/shared/: Easing.cpp  Easing.h  command.h  config.h  cube.h  ents.h  geom.cpp  geom.h  glemu.cpp  glemu.h  glexts.h  iengine.h  igame.h  loops.h  stream.cpp  stream.h  tools.cpp  tools.h  types.h  zip.cpp  zip.h
src/shared/entities/: EntityEditorMenu.cpp  EntityEditorMenu.h  basecliententity.cpp  basecliententity.h  basedynamicentity.cpp  basedynamicentity.h  baseentity.cpp  baseentity.h  basephysicalentity.cpp  basephysicalentity.h  coreentity.cpp  coreentity.h  decalentity.cpp  decalentity.h  entityfactory.cpp  entityfactory.h  shared+entities+coreentity.binding.cpp
src/shared/geom/: bvec.cpp  bvec.h  bvec4.cpp  bvec4.h  constants.h  dualquat.cpp  dualquat.h  dvec4.h  half.cpp  half.h  hvec.cpp  hvec.h  hvec2.cpp  hvec2.h  hvec4.cpp  hvec4.h  ivec.cpp  ivec.h  ivec2.cpp  ivec2.h  ivec4.cpp  ivec4.h  matrix2.cpp  matrix2.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  matrix4x3.cpp  matrix4x3.h  plane.cpp  plane.h  quat.cpp  quat.h  squat.cpp  squat.h  svec.h  triangle.h  usvec.h  vec.cpp  (+5 more)
src/shared/networking/: cl_frametimestate.h  cl_sv.cpp  cl_sv.h  frametimestate.h  network.cpp  network.h  protocol.cpp  protocol.h  sv_frametimestate.h
src/shared/nukeui/: nukeui.h
src/shared/python/: PythonPipeIO.cpp  PythonPipeIO.h  PythonScript.cpp  PythonScript.h
src/shared/tools/: cubestr.h  databuf.h  endianness.h  hash.h  isclass.h  loop.h  macros.h  packetbuf.h  queue.h  sort.h  stream.h  streambuf.h  vector.h
src/shared/utils/: cubectype.h  cubestr.cpp  cubestr.h  databuf.h  endianness.h  hashbase.h  hashset.h  hashtable.h  hthash.h  network.cpp  network.h  queue.h  rndnumbers.h  stream.h  streambuf.h  ucharbuf.h  vector.h
src/xcode/: Launcher.m  Polyhedron.plist  main.m
src/xcode/Frameworks/SDL2_mixer.framework/Versions/A/Frameworks/modplug.framework/Versions/A/Headers/: modplug.h
src/xcode/Polyhedron.xcassets/AppIcon.appiconset/: Contents.json
(+105 files in other folders)
